--- a/sass/layouts/_footer.sass
+++ b/sass/layouts/_footer.sass
@@ -6,6 +6,9 @@
 	background-color: variables.$bg-color 
 	padding: 3rem 0
 
+	@include base-mixins.mobile
+		padding: 3rem
+
 	a, p
 		color: variables.$gray-text-color 
 		
@@ -29,8 +32,15 @@
 		padding-bottom: 3rem
 		@include layouts-mixins.center-content
 
+		@include base-mixins.mobile
+			flex-direction: column
+
 		&-about, &-categories, &-information, &-menu
 			max-width: 25%
+
+			@include base-mixins.mobile
+				max-width: 100%
+				margin-bottom: 1rem
 
 	&-bottom
 		flex-direction: column
