--- a/sass/layouts/_banner-section.sass
+++ b/sass/layouts/_banner-section.sass
@@ -1,6 +1,10 @@
-// @use '/base/base-mixins'
+@use '../base/base-mixins'
 @use 'layouts-mixins'
 
 .banners 
 	@include layouts-mixins.center-content
 	padding: 3rem 0
+
+	@include base-mixins.mobile
+		flex-direction: column
+		align-items: center
