--- a/sass/layouts/_header.sass
+++ b/sass/layouts/_header.sass
@@ -9,6 +9,9 @@
 		background-color: variables.$secondary-bg-color
 		color: variables.$light-color
 
+		@include base-mixins.mobile
+			display: none
+
 		&-container
 			@include layouts-mixins.center-content
 			padding: .8rem 0
@@ -27,6 +30,10 @@
 		@include layouts-mixins.center-content
 		padding: 1.3rem 0
 
+		@include base-mixins.mobile
+			flex-direction: column
+			align-items: center
+
 		a, span, i 
 			color: variables.$light-color
 
@@ -44,6 +51,10 @@
 			justify-content: center
 			width: 45%
 
+			@include base-mixins.mobile
+				width: 100%
+				margin: 2rem 0
+
 			input
 				height: 40px
 
@@ -57,6 +68,9 @@
 
 			.wishlist-container, .header-cart-container
 				@include layouts-mixins.header-icon
+				
+				@include base-mixins.mobile
+					margin: 1rem
 
 .header-bottom
 	background-color: variables.$light-color
@@ -67,6 +81,9 @@
 		@include layouts-mixins.center-content
 		justify-content: left
 		padding: 1rem 0
+
+		@include base-mixins.mobile
+			display: none
 
 		li
 			margin-right: 1.3rem
